[gd_scene load_steps=29 format=3 uid="uid://05rt7y4rwb02"]

[ext_resource type="Script" path="res://scenes/robots/base_robot.gd" id="1_n7rmx"]
[ext_resource type="Texture2D" uid="uid://dmn6qluxf74hm" path="res://assets/robots/robot-tileset.png" id="2_8weuy"]
[ext_resource type="PackedScene" uid="uid://crns5it7fu8im" path="res://utilities/components/velocity_component.tscn" id="3_cbsef"]
[ext_resource type="Script" path="res://utilities/states/state_machine.gd" id="3_hybgk"]
[ext_resource type="PackedScene" uid="uid://c1abdltqthpwf" path="res://scenes/ui/timer.tscn" id="3_jsuk4"]
[ext_resource type="Script" path="res://scenes/robots/idle.gd" id="4_fseqp"]
[ext_resource type="Script" path="res://scenes/robots/wander.gd" id="5_i2inj"]
[ext_resource type="Script" path="res://scenes/robots/spawn.gd" id="5_llxmp"]
[ext_resource type="Script" path="res://scenes/robots/despawn.gd" id="7_h48ei"]
[ext_resource type="PackedScene" uid="uid://bjywnferspmem" path="res://scenes/ui/fruit_panel_container_new.tscn" id="8_wmew2"]
[ext_resource type="AudioStream" uid="uid://dqjtowthu1dwg" path="res://assets/audio/robot/robot-spawn.mp3" id="11_psk2e"]
[ext_resource type="AudioStream" uid="uid://dhikfs5l88iuk" path="res://assets/audio/robot/robot-spawn-2.mp3" id="12_ja06v"]
[ext_resource type="AudioStream" uid="uid://dq50d8vrsrfdj" path="res://assets/audio/robot/robot-interacted.mp3" id="13_pp8od"]
[ext_resource type="AudioStream" uid="uid://xigiidupoqug" path="res://assets/audio/robot/robot-interacted-2.mp3" id="14_xqkgi"]
[ext_resource type="AudioStream" uid="uid://caqk775ryndlk" path="res://assets/audio/robot/robot-mad.mp3" id="15_040yo"]
[ext_resource type="AudioStream" uid="uid://1rb5cklpqxoa" path="res://assets/audio/robot/robot-happy.mp3" id="15_dbt7l"]
[ext_resource type="AudioStream" uid="uid://48amnf22tsap" path="res://assets/audio/robot/robot-mad-2.mp3" id="16_sl6h1"]
[ext_resource type="AudioStream" uid="uid://wvqdh8qa8r62" path="res://assets/audio/get-money.mp3" id="18_abwqe"]
[ext_resource type="AudioStream" uid="uid://dgc1iibe87iix" path="res://assets/audio/robot/robot-deactivated.mp3" id="18_fb8bs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a7iv5"]
height = 26.0

[sub_resource type="AtlasTexture" id="AtlasTexture_vd2ho"]
atlas = ExtResource("2_8weuy")
region = Rect2(208, 16, 208, 32)

[sub_resource type="Animation" id="Animation_jkft6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("General/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("General/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gkvv1"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("General/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_5hwsp"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("General/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_w73xs"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("General/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r1lqm"]
_data = {
"RESET": SubResource("Animation_jkft6"),
"idle": SubResource("Animation_gkvv1"),
"spawn": SubResource("Animation_5hwsp"),
"walk": SubResource("Animation_w73xs")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oh18a"]
size = Vector2(22, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fa1v7"]
size = Vector2(14, 26)

[node name="BaseRobot" type="CharacterBody2D"]
z_index = -1
collision_layer = 4
script = ExtResource("1_n7rmx")

[node name="PhysicsShape" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("CapsuleShape2D_a7iv5")

[node name="General" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="General"]
texture = SubResource("AtlasTexture_vd2ho")
hframes = 13

[node name="Animator" type="AnimationPlayer" parent="General"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_r1lqm")
}
autoplay = "spawn"

[node name="FloorDetectorRay" type="RayCast2D" parent="General"]
position = Vector2(10, 2.08165e-12)
target_position = Vector2(0, 23)
collide_with_areas = true

[node name="AreaDetector" type="Area2D" parent="General"]
collision_layer = 0
collision_mask = 64

[node name="AreaDetectorShape" type="CollisionShape2D" parent="General/AreaDetector"]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_oh18a")
debug_color = Color(0.454902, 0.584314, 0.352941, 0.419608)

[node name="Timer" parent="General" instance=ExtResource("3_jsuk4")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -15.0
offset_top = -17.0
offset_right = 15.0
offset_bottom = -11.0
grow_horizontal = 2
patience_time = 140.0

[node name="Components" type="Node2D" parent="."]

[node name="VelocityComponent" parent="Components" node_paths=PackedStringArray("actor") instance=ExtResource("3_cbsef")]
actor = NodePath("../..")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_hybgk")
initial_state = NodePath("Spawn")

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource("5_llxmp")

[node name="Despawn" type="Node" parent="StateMachine"]
script = ExtResource("7_h48ei")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_fseqp")

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle"]
one_shot = true

[node name="Wander" type="Node" parent="StateMachine"]
script = ExtResource("5_i2inj")

[node name="WanderTimer" type="Timer" parent="StateMachine/Wander"]
one_shot = true

[node name="FruitPanelContainerNew" parent="." instance=ExtResource("8_wmew2")]

[node name="FruitPanelContainer" parent="FruitPanelContainerNew" index="0"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = -33.0
offset_right = 25.0
offset_bottom = -21.0
grow_horizontal = 2

[node name="InteractShape" parent="FruitPanelContainerNew/InteractArea" index="0"]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_fa1v7")

[node name="Audio" type="Node2D" parent="."]

[node name="Spawn" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("11_psk2e")
volume_db = -10.0

[node name="Spawn2" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("12_ja06v")
volume_db = -9.0

[node name="Interacted" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("13_pp8od")
volume_db = -9.0

[node name="Interacted2" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("14_xqkgi")
volume_db = -9.0

[node name="Mad" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("15_040yo")
volume_db = -9.0

[node name="Mad2" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("16_sl6h1")
volume_db = -9.0

[node name="Happy" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("15_dbt7l")
volume_db = -9.0

[node name="GetMoney" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("18_abwqe")
volume_db = -9.0

[node name="Despawn" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("18_fb8bs")
volume_db = -8.0

[connection signal="animation_finished" from="General/Animator" to="StateMachine/Spawn" method="_on_animator_animation_finished"]
[connection signal="im_out_of_patience" from="General/Timer" to="." method="_on_timer_im_out_of_patience"]
[connection signal="timeout" from="StateMachine/Idle/IdleTimer" to="StateMachine/Idle" method="_on_idle_timer_timeout"]
[connection signal="timeout" from="StateMachine/Wander/WanderTimer" to="StateMachine/Wander" method="_on_wander_timer_timeout"]
[connection signal="interacted_with" from="FruitPanelContainerNew" to="." method="_on_fruit_panel_container_new_interacted_with"]

[editable path="General/Timer"]
[editable path="FruitPanelContainerNew"]
